--- a/style.css
+++ b/style.css
@@ -1,20 +1,44 @@
+.main{
+    position: relative;
+    border-radius: 10px;
+    width: 80%;
+    left: 5%;
+    margin: 80px;
+    min-height: 1200px;
+    background-color: white;
+}
+
 header{
-    background-color: #000;
-    width: 100%;
+    position: relative;
+    background-color: black;
+    width: max;
     height: 250px;
     padding: 10px;
-    box-shadow: 0px 10px 5px grey;
-    align-items: center;
+    box-shadow: 0px px 5px grey;
 }
 
 .Title{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     padding: 50px;
+    padding-left: 100px;
 }
 
 body{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #000;
+}
+
+.background{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    height: 1px;
+    width: 1px;
+    background-color: #fff;
+    border-radius: 10%;
+    transform: scale(0.6);
+    box-shadow:-24vw -44vh 2px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-24vw -44vh 2px 2px #fff,38vw -4vh 0px 0px #fff,-20vw -48vh 1px 2px #fff,-39vw 38vh 3px 1px #fff,-42vw -11vh 0px 3px #fff,12vw 15vh 3px 3px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,34vw -38vh 1px 0px #fff,-17vw 45vh 3px 1px #fff,22vw -36vh 3px 2px #fff,-42vw 1vh 1px 0px #fff,42vw 6vh 3px 2px #fff,2vw -36vh 3px 2px #fff,2vw -36vh 3px 2px #fff,2vw -36vh 3px 2px #fff,-17vw 45vh 3px 1px #fff,-17vw 45vh 3px 1px #fff,-17vw 45vh 3px 1px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-8vw 9vh 0px 2px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,42vw 6vh 3px 2px #fff;
 }
 
 .profile{
@@ -36,10 +60,4 @@ body{
 .Works{
     padding-left: 50px;
     font-weight: 500;
-}
-
-.end{
-    background-color: #000;
-    width: 100%;
-    height: 10px;
 }
