--- a/style.css
+++ b/style.css
@@ -33,12 +33,30 @@ body{
     position: relative;
     top: 50%;
     left: 50%;
-    height: 1px;
-    width: 1px;
+    height: 5px;
+    width: 5px;
     background-color: #fff;
-    border-radius: 10%;
-    transform: scale(0.6);
+    border-radius: 50%;
     box-shadow:-24vw -44vh 2px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-24vw -44vh 2px 2px #fff,38vw -4vh 0px 0px #fff,-20vw -48vh 1px 2px #fff,-39vw 38vh 3px 1px #fff,-42vw -11vh 0px 3px #fff,12vw 15vh 3px 3px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,34vw -38vh 1px 0px #fff,-17vw 45vh 3px 1px #fff,22vw -36vh 3px 2px #fff,-42vw 1vh 1px 0px #fff,42vw 6vh 3px 2px #fff,2vw -36vh 3px 2px #fff,2vw -36vh 3px 2px #fff,2vw -36vh 3px 2px #fff,-17vw 45vh 3px 1px #fff,-17vw 45vh 3px 1px #fff,-17vw 45vh 3px 1px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-8vw 9vh 0px 2px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,42vw 6vh 3px 2px #fff;
+    animation: zoom 5s infinite;
+}
+
+@keyframes zoom{
+    0%{
+        transform: scale(0.5);
+    }
+    25%{
+        transform: scale(0.75);
+    }
+    50%{
+        transform: scale(1.0);
+    }
+    75%{
+        transform: scale(1.25);
+    }
+    100%{
+        transform: scale(1.5);
+    }
 }
 
 .profile{
