--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .main{
     position: relative;
     border-radius: 10px;
-    width: 80%;
-    left: 5%;
+    width: 50%;
+    left: 20%;
     margin: 80px;
-    min-height: 1200px;
+    min-height: 1150px;
     background-color: white;
 }
 
@@ -14,14 +14,14 @@ header{
     width: max;
     height: 250px;
     padding: 10px;
-    box-shadow: 0px px 5px grey;
 }
 
 .Title{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     padding: 50px;
-    padding-left: 100px;
+    position: relative;
+    font-size: large;
 }
 
 body{
@@ -33,12 +33,13 @@ body{
     position: relative;
     top: 50%;
     left: 50%;
-    height: 5px;
-    width: 5px;
+    height: 1px;
+    width: 1px;
     background-color: #fff;
     border-radius: 50%;
     box-shadow:-24vw -44vh 2px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-24vw -44vh 2px 2px #fff,38vw -4vh 0px 0px #fff,-20vw -48vh 1px 2px #fff,-39vw 38vh 3px 1px #fff,-42vw -11vh 0px 3px #fff,12vw 15vh 3px 3px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,34vw -38vh 1px 0px #fff,-17vw 45vh 3px 1px #fff,22vw -36vh 3px 2px #fff,-42vw 1vh 1px 0px #fff,42vw 6vh 3px 2px #fff,2vw -36vh 3px 2px #fff,2vw -36vh 3px 2px #fff,2vw -36vh 3px 2px #fff,-17vw 45vh 3px 1px #fff,-17vw 45vh 3px 1px #fff,-17vw 45vh 3px 1px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-24vw -44vh 2px 2px #fff,-8vw 9vh 0px 2px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,-8vw 9vh 0px 2px #fff,42vw 6vh 3px 2px #fff;
     animation: zoom 5s infinite;
+    animation-duration: 8s;
 }
 
 @keyframes zoom{
@@ -46,16 +47,16 @@ body{
         transform: scale(0.5);
     }
     25%{
-        transform: scale(0.75);
-    }
-    50%{
         transform: scale(1.0);
     }
+    50%{
+        transform: scale(1.5);
+    }
     75%{
-        transform: scale(1.25);
+        transform: scale(2.0);
     }
     100%{
-        transform: scale(1.5);
+        transform: scale(2.5);
     }
 }
 
